syntax = "proto3";

package veranatest.validatorregistry.v1;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "veranatest/validatorregistry/v1/params.proto";

option go_package = "veranatest/x/validatorregistry/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);

  // OnboardValidator defines the OnboardValidator RPC.
  rpc OnboardValidator(MsgOnboardValidator) returns (MsgOnboardValidatorResponse);
}

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "veranatest/x/validatorregistry/MsgUpdateParams";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.

  // NOTE: All parameters must be supplied.
  Params params = 2 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

// MsgOnboardValidator defines the MsgOnboardValidator message.
message MsgOnboardValidator {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string index = 2;
  string member_id = 3;
  string operator_address = 4 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string consensus_pubkey = 5;
  string status = 6;
  uint64 term_end = 7;
}

// MsgOnboardValidatorResponse defines the MsgOnboardValidatorResponse message.
message MsgOnboardValidatorResponse {}
